# aws-eks

./: .dockerignore  .gitignore  DjangoDockerfile  Dockerfile  FlaskDockerfile  django-docker-compose.yml  docker-compose.yml  flask-docker-compose.yml
.github/workflows/: deply-image-to-ecr.yml  destroy_pipelines.yml  run-flask-tests.yml
aws-infra/: backend.tf  database.tf  main.tf  output.tf  provider.tf  variables.tf
backend-api/: pyproject.toml
backend-api/backend_api/: __init__.py
backend-api/tests/: conftest.py
django-api/: .prod_env  README.md  manage.py  pyproject.toml
django-api/django_api/: settings.py  wsgi.py
django-api/roles/: models.py
django-api/roles/migrations/: 0001_initial.py
django-api/scripts/: entrypoint.sh  migrate.sh
flask-api/: README.md
flask-api/flask_api/: __init__.py
flask-api/tests/: test_fibonacci.py  test_get_fibonacci.py
k8s/1-rbac-viewer/: 0-viewer_cluster_role.yml  1-viewer_cluster_role_binding.yml
k8s/2-rbac-admin/: admin_cluster_role_binding.yml
k8s/3-metrics/: 0-namespace.yml  1-deployment.yml  2-service.yml  3-hpa.yml
terraform/: 0-variables.tf  10-nodes.tf  11-developer_user.tf  12-manager_user.tf  13-helm_provider.tf  14-metrics_server.tf  15-flask_api_repo.tf  15-pod_identity_addon.tf  18-load_balancer_controller.tf  4-vpc.tf  6-subnets.tf  8-route_tables.tf  backend.tf  cluster_autoscaler.tf  developer_user.tf  eks.tf  flask_api_repo.tf  internet_gateway.tf  manager_user.tf  metrics_server.tf  nat_gateway.tf  pod_identity_addon.tf  providers.tf  subnets.tf  variables.tf
(+18 files in other folders)
