[tool.poetry]
name = "django-api"
version = "0.1.0"
description = "Django REST API"
authors = ["BhattraiDeb <bhatrai.deb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.7"
djangorestframework = "^3.15.2"
gunicorn = "^22.0.0"
requests = "^2.32.3"
django-dotenv = "^1.4.2"
psycopg2-binary = "^2.9.9"
django-storages = "^1.14.4"
boto3 = "^1.34.146"

[tool.poetry.dev-dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
